--- a/package.json
+++ b/package.json
@@ -12,16 +12,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.0.0",
+    "@angular/animations": "^5.1.0",
+    "@angular/cdk": "^5.0.1",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
     "@angular/core": "^5.0.0",
     "@angular/forms": "^5.0.0",
     "@angular/http": "^5.0.0",
+    "@angular/material": "^5.0.1",
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "body-parser": "^1.18.2",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "csvtojson": "^1.1.9",
+    "express-fileupload": "^0.3.0",
+    "express-session": "^1.15.6",
+    "fast-csv": "^2.4.1",
+    "http-client": "^4.3.1",
+    "multer": "^1.3.0",
+    "ng2-file-upload": "^1.3.0",
+    "ngx-bootstrap": "^2.0.0-beta.10",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
