--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "express-session": "^1.15.6",
     "fast-csv": "^2.4.1",
     "http-client": "^4.3.1",
+    "mongodb": "^3.0.1",
+    "mongoose": "^4.13.9",
     "multer": "^1.3.0",
     "ng2-file-upload": "^1.3.0",
     "ngx-bootstrap": "^2.0.0-beta.10",
